--- a/dynamic/styles/index.css
+++ b/dynamic/styles/index.css
@@ -1,112 +1,122 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box
+}
+
+.body {
+	font-family: 'Roboto', sans-serif;
+	min-height: 100vh;
+	position: relative;
+	padding-bottom: 50px;
+	background-color: #f3f6fb;
+}
+
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: 40px;
+	padding-right: 40px;
+	font-size: 18px;
+	height: 64px;
+	background-color: #ffffff;
+}
+
+.logo {
+	margin-right: auto;
+}
+
+.menu {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	list-style: none;
+}
+
+.menu__list {
+	margin: 0 50px;
+}
+
+.menu__link {
+	text-decoration: none;
+	color: black;
+	cursor: pointer;
+}
+
+.user {
+	margin-left: auto;
 }
 
 .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    background-color: #f3f6fb;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 50px;
 }
 
-.container {
-    width: 320px;
-    padding: 20px;
+.slideshow-container {
+	position: relative;
+	margin: 0 auto;
+	width: 800px;
+	height: 400px;
+	overflow: hidden;
 }
 
-.container__title {
-    margin: 0 0 20px;
-    font-size: 40px;
-    font-weight: bold;
-    color: #4875E5;
+.slideshow-image {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	transition: opacity 0.5s ease-in-out;
 }
 
-.container__description {
-    margin: 0 0 30px;
-    font-size: 20px;
-    line-height: 28px;
+.slideshow-controls {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	z-index: 1;
 }
 
-.login-form {
-    display: flex;
-    flex-direction: column;
+.slideshow-controls button {
+	border: none;
+	background: transparent;
+	color: #ffffff;
+	font-size: 24px;
+	padding: 10px;
+	cursor: pointer;
 }
 
-.login-form__input {
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
+.slideshow-controls button:focus {
+	outline: none;
 }
 
-.login-form__input:focus {
-    outline: #4875E5 auto 1px;
+.slideshow-caption {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #ffffff;
+	font-size: 18px;
+	text-align: center;
 }
 
-.login-form__submit-row {
-    padding: 5px 0 0 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+	background-color: #ffffff;
 }
 
-.login-form__checkbox {
-    accent-color: #4875E5;
-    scale: 1.05;
-    cursor: pointer;
-}
-
-.login-form__label {
-    cursor: pointer;
-}
-
-.login-form__submit {
-    background-color: #4875E5;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 6px;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: all 0.2s ease-out;
-}
-
-.login-form__submit:hover {
-    background-color: #3352a1;
-}
-
-.login-form__submit:active {
-    outline: #ffffff auto 1px;
-}
-
-.login-form__input:focus {
-    border: black 1px;
-}
-
-.content__image {
-    max-width: 100%;
-    height: auto;
-}
-
-@media only screen and (max-width: 768px) {
-    .main {
-        flex-direction: column-reverse;
-    }
-
-    .container {
-        width: 100%;
-    }
-
-    .container__title {
-        font-size: 35px;
-    }
-
-    .container__description {
-        font-size: 20px;
-    }
+.footer__text {
+	font-size: 14px;
 }
