--- a/dynamic/client/styles/homework.css
+++ b/dynamic/client/styles/homework.css
@@ -133,6 +133,26 @@
 	border-radius: 5px;
 }
 
+.homework__add-button {
+	background-color: #4875E5;
+	color: #FFFFFF;
+	border: none;
+	border-radius: 6px;
+	padding: 5px;
+	margin-top: 10px;
+	font-size: 14px;
+	cursor: pointer;
+	transition: all 0.2s ease-out;
+}
+
+.homework__add-button:hover {
+	background-color: #3352a1;
+}
+
+.homework__add-button:active {
+	outline: #ffffff auto 1px;
+}
+
 .footer {
 	display: flex;
 	justify-content: center;
