--- a/dynamic/client/styles/grades.css
+++ b/dynamic/client/styles/grades.css
@@ -118,6 +118,67 @@
 	padding: 10px;
 }
 
+.delete-button,
+.add-button {
+	padding: 10px 10px;
+	margin: 10px;
+	font-size: 16px;
+	background-color: #4875E5;
+	color: #ffffff;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.delete-button:hover,
+.add-button:hover {
+	background-color: #3653a8;
+}
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	padding: 20px;
+	width: 400px;
+}
+
+.modal-input {
+	width: 100%;
+	height: 30px;
+	padding: 5px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+}
+
+.modal-button {
+	padding: 10px 20px;
+	margin: 10px;
+	font-size: 14px;
+	background-color: #4875E5;
+	color: #ffffff;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.modal-button:hover {
+	background-color: #3653a8;
+}
+
 .grades__input {
 	width: 50px;
 	height: 30px;
